--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <h1>Header</h1>
+    </header>
     
+    <!-- Main -->
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+
+    <!-- Footer -->
+    <footer></footer>
 </body>
 </html>
