add main section in index.html

--- a/index.html
+++ b/index.html
@@ -11,16 +11,30 @@
     <header>
         <h1>Header</h1>
     </header>
-    
+
     <!-- Main -->
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="container">
+            <h2>Pinco Pallo</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio consectetur quibusdam, sequi aliquam dolor ipsam harum animi esse quisquam error tempore recusandae itaque illum autem illo saepe placeat. Soluta, facere.</p>
+        </section>
+        <section class="container">
+            <h2>Pinco Pallo</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, voluptatum. Harum numquam incidunt animi molestias dolore dolorum iusto quod sequi?</p>
+        </section>
+        <section class="container">
+            <h2>Pinco Pallo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eum repellat explicabo, fugit iusto dolore.</p>
+        </section>
+        <section class="container">
+            <h2>Pinco Pallo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere debitis saepe dicta esse quae qui, ea pariatur deserunt inventore iste perspiciatis! Voluptatem libero cumque cum!</p>
+        </section>
     </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <p id="foot">Made with &hearts; by ....</p>
+    </footer>
 </body>
 </html>
