add footer in index.html and change rules in style.css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Footer -->
     <footer>
-        <p id="foot">Made with &hearts; by ....</p>
+        <p>Made with &hearts; by ....</p>
     </footer>
 </body>
 </html>
